# MESS

./: .gitignore  MESSabstract.py  MESSaux.py  README.md  SCRATCH  altafen 20xx code.txt  main1.py  main2.py  ptool  pyproject.toml  sandbox.py
MESSDOCS/: Abstractions_and_Systems.txt  Action.txt  Asynchronicity.txt  Developments_Log.txt  MESS.txt  Scratchpad.txt  notebook.zim
MESSDOCS/MESS/: Framework.txt  Overview.txt
dev/: MESSabstract.py  MESSactions.py  MESSaux.py  altafen 20xx code.txt  main1.py  strategyplayer_tool.py  strategyplayer_tool_callbacks.py  strategyplayer_tool_layout.py  strategyplayer_tool_templates.py
docs/: DPG  Notes for Developers.md  TODO
docs/MESS/: TODO.txt
docs/old_docs/MESS/: Strategy.txt  UI.txt
mess/messlib/data_structures/: classes.py  helpers.py  move_definitions.py  situation.py  translations.py
mess/messlib/interfaces/: host.py  vis.py
mess/messtool/: singletons.py
mess/payofftool/: README.md  resultsplot.py  solver.py  structures.py  tool.py
res/: altafen dpad code.txt  autotranslate.py  codes.txt  dummy.yaml  modified altafen dpad code.txt  untitled.ui
src/: strategyplayer_tool.py
src/messlib/: classes_abstract.py  classes_functional.py  console_interface.py  engine.py  functions_aux.py  game.py  installer.py  serialization.py  uilogging.py
src/messlib/interfaces/: engine.py  (+8 more)
src/messtool/: strategyplayer_tool_callbacks.py  strategyplayer_tool_classes.py  strategyplayer_tool_layout.py  strategyplayer_tool_templates.py  tool_classes.py  tool_layout.py  tool_templates.py
src/payofftool/: solver.py  tool.py
(+21 files in other folders)
