[project]
name = "mess"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "black>=25.1.0",
    "dearpygui-ext>=2.0.0",
    "dearpygui>=1.11.1",
    "melee>=0.45.1",
    "mess-animations",
    "platformdirs>=4.3.6",
    "pygithub>=2.6.1",
    "pyyaml>=6.0.2",
    "tqdm>=4.67.3",
]

[tool.uv.sources]
mess-animations = { git = "https://github.com/heatherspacek/animations" }
